# Memory-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUG_HUNT_GUIDE.md  Dockerfile  PRD.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03761d5ed341_initial_schema.py  d67a7ef2d7a4_sources_folder_filename_uniqueness.py
docs/: README.md  TDD.md  context.md  project_desciption.md
src/memory_ai/: auth.py  cards.py  config.py  database.py  flashcards.py  generation.py  hierarchy.py  main.py  models.py  notes.py  parsing.py  quiz.py  scheduling.py  written_answer.py
tests/: conftest.py  test_auth.py  test_cards_delete.py  test_cards_edit.py  test_cards_view.py  test_config.py  test_convert.py  test_convert_retry.py  test_convert_status.py  test_current_user.py  test_database.py  test_db_harness.py  test_flashcards.py  test_folders.py  test_health.py  test_hierarchy_authorization.py  test_hierarchy_page.py  test_login.py  test_logout.py  test_models.py  test_note_actions.py  test_note_content.py  test_parsing.py  test_quiz_generator.py  test_quiz_nav_js.py  test_quiz_route.py  test_quiz_ui.py  test_register.py  test_review_global.py  test_review_grading.py  test_review_queries.py  test_review_subject.py  test_review_sync.py  test_review_written_answer.py  test_review_written_answer_integration.py  test_scheduling.py  test_scheduling_persistence.py  test_settings.py  test_sidebar_crud.py  test_sidebar_tree.py  (+7 more)
tickets/: README.md  SUPERVISOR-GUIDE.md
tickets/03-auth/: PRD.md  (+2 more)
(+96 files in other folders)
