[project]
name = "memory-ai"
version = "0.1.0"
description = "Memory AI - notes to flashcards with spaced repetition"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "pyjwt>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "pypdf>=5.1",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers[postgres]>=4.9",
    "httpx>=0.27",
    "types-passlib>=1.7",
    "types-markdown>=3.10.2.20260712",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_ai"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/memory_ai"]
